odysseus/values/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odysseus
spec:
  selector:
    app: odysseus
  type: ClusterIP
  ports:
  - name: web
    port: 7000
    targetPort: 7000
