odysseus/values/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odysseus-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: odysseus.homelab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: odysseus
                port:
                  number: 7000
